parse-display/tests/compile_fail/display/invalid_with_enum.stderr
error[E0425]: cannot find value `unknown` in this scope
 --> tests/compile_fail/display/invalid_with_enum.rs:6:24
  |
6 |     A(#[display(with = unknown)] u32),
  |                        ^^^^^^^ not found in this scope
